--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=club-card
-spring.datasource.url=jdbc:postgresql://localhost:5432/club_cards
-spring.datasource.username=camp
-spring.datasource.password=1234
+spring.datasource.url=${ENV_DATASOURCE_URL}
+spring.datasource.username=${ENV_DATASOURCE_USERNAME}
+spring.datasource.password=${ENV_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
