simple member profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=club-card
 spring.datasource.url=${ENV_DATASOURCE_URL}
 spring.datasource.username=${ENV_DATASOURCE_USERNAME}
-spring.datasource.password=${ENV_DATASOURCE_PASSWORD}
+wspring.datasource.password=${ENV_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
