some fixes for database and base for refresh access token (not tested)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=club-card
-spring.datasource.url=${ENV_DATASOURCE_URL}
-spring.datasource.username=${ENV_DATASOURCE_USERNAME}
-wspring.datasource.password=${ENV_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
-
+spring.r2dbc.url=${ENV_DATASOURCE_URL}
+spring.r2dbc.username=${ENV_DATASOURCE_USERNAME}
+spring.r2dbc.password=${ENV_DATASOURCE_PASSWORD}
+springdoc.swagger-ui.path=/api
