--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   springboot-app:
     image: club-card:latest
@@ -9,7 +7,6 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - ENV_DATASOURCE_URL=jdbc:postgresql://localhost:5432/club_cards
+      - ENV_DATASOURCE_URL=r2dbc:postgresql://localhost:5432/club_cards
       - ENV_DATASOURCE_USERNAME=camp
       - ENV_DATASOURCE_PASSWORD=1234
-      - SPRING_PROFILES_ACTIVE=prod
