fix jwt auth token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.application.name=club-card
 spring.r2dbc.url=${ENV_DATASOURCE_URL}
 spring.r2dbc.username=${ENV_DATASOURCE_USERNAME}
 spring.r2dbc.password=${ENV_DATASOURCE_PASSWORD}
+spring.liquibase.enabled=false
+spring.flyway.enabled=false
+
 springdoc.swagger-ui.path=/api
+
+jwt.cookieExpiry = 1800
